--- a/TheDummyApp/TheDummyApp.csproj
+++ b/TheDummyApp/TheDummyApp.csproj
@@ -13,4 +13,12 @@
     <PackageReference Include="xunit.extensibility.core" Version="2.9.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EditorConfigFiles Remove="C:\src\poc\TheDummyApp\TheDummyApp\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\src\poc\TheDummyApp\TheDummyApp\.editorconfig" />
+  </ItemGroup>
+
 </Project>
